Bug 359468 - Plasma-pk-updates does not respect the package flags for restart when set
Summary: Plasma-pk-updates does not respect the package flags for restart when set
Status: RESOLVED FIXED
Alias: None
Product: plasma-pk-updates
Classification: Plasma
Component: general (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-16 15:56 UTC by Raymond Wooninck
Modified: 2016-09-20 12:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raymond Wooninck 2016-02-16 15:56:31 UTC
It seems that plasma-pk-updates doesn't do anything to restart the system (or notifying the user) if a package was updated that has the flag set that the system needs to be restarted. 

Checking the sources, it seems that this functionality was never implemented: 

void PkUpdates::onRequireRestart(PackageKit::Transaction::Restart type, const QString &packageID)
{
    qCDebug(PLASMA_PK_UPDATES) << "RESTART" << PackageKit::Daemon::enumToString<PackageKit::Transaction>((int)type, "Restart")
             << "is required for package" << packageID;
}

It would make the applet complete when also this functionality could be offered and on pair with the Gnome counterpart. 

Reproducible: Always
Comment 1 Jan Grulich 2016-09-20 12:34:13 UTC
Git commit eb42e60b6ca9acfe8555989c391236c76c002331 by Jan Grulich.
Committed on 20/09/2016 at 12:34.
Pushed by grulich into branch 'master'.

Add notification about required restart/logout

M  +26   -0    src/declarative/pkupdates.cpp

http://commits.kde.org/plasma-pk-updates/eb42e60b6ca9acfe8555989c391236c76c002331