Add notification about required restart/logout

BUG:359468